--- a/css/styles.css
+++ b/css/styles.css
@@ -250,8 +250,8 @@ a {
   background-size: cover;
   text-align: center;
   background: var(--brand-color) ;
-  padding-top: 192px;
-  padding-bottom: 192px;
+  padding-top: 188px;
+  padding-bottom: 188px;
   max-width: 1440px;
   height: 600px;
   margin-left: auto;
@@ -1076,10 +1076,10 @@ padding-right: 15px;
  
   h1 {
     font-weight: 700;
-    font-size: 40px;
+    font-size: 36px;
     line-height: 40px;
     text-align: center;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
     text-transform: capitalize;
     margin-bottom: 72px;
     margin-top: 80px;
@@ -1350,11 +1350,26 @@ height: 88px;
 /* hero */
   
 .hero {
-  
+  background-size: cover;
+background-repeat: no-repeat;
+padding-top: 112px;
+padding-bottom: 112px;
 background-image : linear-gradient(
 rgba(46, 47, 66, 0.7),
 rgba(46, 47, 66, 0.7)),
 url("../images/hero-image-mob1x.jpg");
+}
+
+.hover-focus {
+  display: block;
+  min-width: 190px;
+  fill: var(--color4);
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+  width: 190px;
+  height: 88px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
          
 
@@ -1632,17 +1647,29 @@ height: 88px;
 
 }
 
+.hover-focus {
+  display: block;
+  min-width: 190px;
+  fill: var(--color4);
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+  width: 190px;
+  height: 88px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* hero */
 
 h1 {
 font-weight: 700;
-font-size: 40px;
+font-size: 36px;
 line-height: 40px;
 text-align: center;
-letter-spacing: 0.02em;
+letter-spacing: 0.04em;
 text-transform: capitalize;
 margin-bottom: 72px;
-  margin-top: 80px;
+margin-top: 80px;
 }
   
 h3 {
@@ -1674,7 +1701,10 @@ p {
 }
 
 .hero {
-
+background-size: cover;
+background-repeat: no-repeat;
+padding-top: 112px;
+padding-bottom: 112px;
 background-image : linear-gradient(
 rgba(46, 47, 66, 0.7),
 rgba(46, 47, 66, 0.7)),
@@ -1775,7 +1805,6 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 margin-bottom: 72px;
-margin-top: -40px;
   }
 
 .h3-planschet {
@@ -1979,6 +2008,18 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  
 }
 
+.hover-focus {
+  display: block;
+  min-width: 168px;
+  fill: var(--color4);
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+  width: 168px;
+  height: 88px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .hover-focus:hover,
 .hover-focus:focus {
 fill: var(--button-background);
@@ -2145,8 +2186,8 @@ border-radius: 4px;
         background-position: center;
         background-size: cover;
         text-align: center;
-        padding-top: 192px;
-        padding-bottom: 192px;
+        padding-top: 112px;
+        padding-bottom: 112px;
         max-width: 1440px;
         height: 600px;
         margin-left: auto;
@@ -2360,6 +2401,7 @@ border-radius: 4px;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 48px;
+    margin-top: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 56px;
@@ -2541,8 +2583,8 @@ background-position: center;
 background-size: cover;
 text-align: center;
 background: var(--brand-color) ;
-padding-top: 192px;
-padding-bottom: 192px;
+padding-top: 188px;
+padding-bottom: 188px;
 max-width: 1440px;
 height: 600px;
 margin-left: auto;
@@ -2565,7 +2607,7 @@ top: 3001px;
 width: 208px;
 left: 540px;
 top: 3001px;
-margin-right: 80px;  
+margin: 0 80px 0 0; 
 }
 
  /*  subscribe   */
